--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,3 +146,12 @@ body {
 .notifications-container .body .notification-card .text-info small {
   display: block;
 }
+.notifications-container .body .notification-card .image {
+  margin-left: auto;
+  width: 50px;
+  height: 50px;
+}
+.notifications-container .body .notification-card .image img {
+  width: 100%;
+  height: 100%;
+}
