--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -184,6 +184,17 @@ body {
           display: block;
         }
       }
+
+      .image {
+        margin-left: auto;
+        width: 50px;
+        height: 50px;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
     }
   }
 }
