--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -95,7 +95,7 @@ body {
     }
   }
 
-  .body {
+  .content {
     .notification-card {
       background-color: transparent;
       border-radius: 10px;
